camera_example/build/log/idf_py_stdout_output_21112
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "C:\Users\zhaoy\Desktop\IoT\HMI OCR\camera_example\build\bootloader\esp-idf\esptool_py" && C:\Users\zhaoy\.espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x10000 bootloader 0x1000 "C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/build/bootloader/bootloader.bin""
Bootloader binary size 0x6de0 bytes. 0x8220 bytes (54%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/take_picture.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/take_picture.c.obj 
ccache C:\Users\zhaoy\.espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -I"C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/build/config" -I"C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main" -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_psram/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_http_client/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_netif/include -I"C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/managed_components/espressif__esp32-camera/driver/include" -I"C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/managed_components/espressif__esp32-camera/conversions/include" -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf/components/esp_ringbuf/include -I"C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/managed_components/espressif__esp_jpeg/include" -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og "-fmacro-prefix-map=C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example=." -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/take_picture.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\take_picture.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/take_picture.c.obj -c "C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c"
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:90: warning: "CAM_PIN_PWDN" redefined
   90 | #define CAM_PIN_PWDN 32
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:67: note: this is the location of the previous definition
   67 | #define CAM_PIN_PWDN -1  //power down is not used
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:92: warning: "CAM_PIN_XCLK" redefined
   92 | #define CAM_PIN_XCLK 0
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:69: note: this is the location of the previous definition
   69 | #define CAM_PIN_XCLK 21
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:100: warning: "CAM_PIN_D3" redefined
  100 | #define CAM_PIN_D3 21
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:77: note: this is the location of the previous definition
   77 | #define CAM_PIN_D3 19
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:101: warning: "CAM_PIN_D2" redefined
  101 | #define CAM_PIN_D2 19
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:78: note: this is the location of the previous definition
   78 | #define CAM_PIN_D2 18
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:102: warning: "CAM_PIN_D1" redefined
  102 | #define CAM_PIN_D1 18
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:79: note: this is the location of the previous definition
   79 | #define CAM_PIN_D1 5
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:103: warning: "CAM_PIN_D0" redefined
  103 | #define CAM_PIN_D0 5
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:80: note: this is the location of the previous definition
   80 | #define CAM_PIN_D0 4
      | 
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c: In function 'http_post_image':
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:231:43: error: expected '}' before ';' token
  231 | #define WEB_SERVER "http://127.0.0.1:8000";
      |                                           ^
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:237:16: note: in expansion of macro 'WEB_SERVER'
  237 |         .url = WEB_SERVER,
      |                ^~~~~~~~~~
C:/Users/zhaoy/Desktop/IoT/HMI OCR/camera_example/main/take_picture.c:236:39: note: to match this '{'
  236 |     esp_http_client_config_t config = {
      |                                       ^
ninja: build stopped: subcommand failed.
